test/runtime-integration-tests/TestPrograms/Syntax/Invalid/unused_tokens_go_like.5th
main(): int { x := 1; ...; a <- b; return 0; }
